--- a/prepros-6.config
+++ b/prepros-6.config
@@ -24,12 +24,14 @@
         "scss/layout/basis.scss",
         "scss/layout/layout.scss",
         "scss/layout/section/header.scss",
-        "scss/layout/section/home.scss"
+        "scss/layout/section/home.scss",
+        "scss/layout/section/works.scss",
+        "scss/layout/section/about.scss"
       ]
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
