Стилизация секции contact

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -26,7 +26,8 @@
         "scss/layout/section/header.scss",
         "scss/layout/section/home.scss",
         "scss/layout/section/works.scss",
-        "scss/layout/section/about.scss"
+        "scss/layout/section/about.scss",
+        "scss/layout/section/contact.scss"
       ]
     }
   ],
