--- a/prepros-6.config
+++ b/prepros-6.config
@@ -27,7 +27,8 @@
         "scss/layout/section/home.scss",
         "scss/layout/section/works.scss",
         "scss/layout/section/about.scss",
-        "scss/layout/section/contact.scss"
+        "scss/layout/section/contact.scss",
+        "scss/layout/section/order.scss"
       ]
     }
   ],
