--- a/prepros-6.config
+++ b/prepros-6.config
@@ -24,6 +24,7 @@
         "scss/layout/basis.scss",
         "scss/layout/layout.scss",
         "scss/layout/section/header.scss",
+        "scss/layout/section/nav.scss",
         "scss/layout/section/home.scss",
         "scss/layout/section/works.scss",
         "scss/layout/section/about.scss",
@@ -33,7 +34,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
@@ -146,7 +147,7 @@
   "file-type-sass": "{\"compilers\":[\"node-sass\",\"autoprefixer\",\"minify-css\"]}",
   "file-type-less": "{\"compilers\":[\"less\",\"autoprefixer\",\"minify-css\"]}",
   "autoprefixer": {
-    "browsers": "last 5 versions"
+    "browsers": "last 3 version, > 1%, ie 10, ie 11, Opera 12.1, FireFox ESR"
   },
   "file-type-pug": "{\"compilers\":[\"pug\"]}",
   "file-type-css": "{\"compilers\":[\"autoprefixer\",\"cssnext\",\"minify-css\"]}",
